# simple_wms

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/: main.py  routes.py
src/domain/entity/: user_entity.py
src/domain/model/: user_model.py
src/infra/: configs.py  create_tables.py  database.py  deps.py
src/interface/: user_interface.py
src/interface/dto/: user_dto.py
