[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[project]
name = "wms-simple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.6",
    "pre-commit>=4.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
]
